--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -7,6 +7,7 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL"
     OR BBE_RENDER_MODE STREQUAL "Emscripten")
   add_subdirectory(OpenGL)
 endif()
+add_subdirectory(Assets)
 
 file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
 target_sources(BrotBoxEngine PRIVATE "${local_src}")
