--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,33 @@ macro(add_trivial_project name)
   endif()
 endmacro()
 
+macro(start_embed_file cpp_file_string h_file_string h_file_name)
+  set(${cpp_file_string} "#include \"BBE/List.h\"\n#include \"${h_file_name}\"\n\n")
+  set(${h_file_string} "#include \"BBE/List.h\"\n\n")
+  set(warningMsg "")
+  string(APPEND warningMsg "// **********************************************************************************************\n")
+  string(APPEND warningMsg "// ***                                     !!!WARNING!!!                                      ***\n")
+  string(APPEND warningMsg "// *** WARNING: AUTO GENERATED FILE! DO NOT MODIFY BY HAND! YOUR CHANGES WILL BE OVERWRITTEN! ***\n")
+  string(APPEND warningMsg "// ***                                     !!!WARNING!!!                                      ***\n")
+  string(APPEND warningMsg "// **********************************************************************************************\n\n\n\n")
+  string(APPEND ${cpp_file_string} ${warningMsg})
+  string(APPEND ${h_file_string} ${warningMsg})
+endmacro()
+
+macro(embed_file_to_source filename cpp_file_string h_file_string)
+  message(STATUS "Embedding File: ${filename}")
+  file(READ ${filename} contents HEX)
+  string(REGEX REPLACE "([0-9a-f][0-9a-f])" "0x\\1," contents ${contents})
+  get_filename_component(fn_wo_ext ${filename} NAME_WE)
+  string(APPEND ${h_file_string} "extern const bbe::List<unsigned char> ${fn_wo_ext}\;\n")
+  string(APPEND ${cpp_file_string} "const bbe::List<unsigned char> ${fn_wo_ext} = { ${contents} }\;\n")
+endmacro()
+
+macro(end_embed_file cpp_file_string h_file_string cpp_file_name h_file_name)
+  file(WRITE ${h_file_name} ${${h_file_string}})
+  file(WRITE ${cpp_file_name} ${${cpp_file_string}})
+endmacro()
+
 add_library(BrotBoxEngine STATIC)
 set_property(TARGET BrotBoxEngine PROPERTY CXX_STANDARD 17)
 set_property(TARGET BrotBoxEngine PROPERTY CXX_STANDARD_REQUIRED ON)
