--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,6 +121,11 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
 elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
+  add_compile_options(-sUSE_PTHREADS=1)
+  add_link_options(-sEXCEPTION_DEBUG=1)
+  add_link_options(--profiling-funcs)
+  add_link_options(-sUSE_PTHREADS=1)
+  add_link_options(-sPTHREAD_POOL_SIZE=20)
   set_target_properties(BrotBoxEngine PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
