Implemented an automatic asset store. A quick and easy way for games to add new assets.

--- a/.gitignore
+++ b/.gitignore
@@ -257,4 +257,6 @@ ModelManifest.xml
 /BrotBoxEngine/Vulkan/EmbedOutput.h
 /BrotBoxEngine/Assets/Fonts/EmbeddedFonts.cpp
 /BrotBoxEngine/Assets/Fonts/EmbeddedFonts.h
+**/AssetStore.cpp
+**/AssetStore.h
 /ExampleSimplePresentation/out.xml
