--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -18,7 +18,7 @@ if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleGrid)
 endif()
 add_subdirectory(ExampleMandelbrot)
-if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
+if(NOT EMSCRIPTEN) # Requires "double" in shader code.
   add_subdirectory(ExampleMandelbrotShader)
 endif()
 if(WIN32)
@@ -27,9 +27,7 @@ endif()
 add_subdirectory(ExampleNeuralRocket)
 add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleParticleLife)
-if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
-  add_subdirectory(ExamplePendulumChaosShader)
-endif()
+add_subdirectory(ExamplePendulumChaosShader)
 add_subdirectory(ExamplePhasmophobiaCheatSheet)
 if(BBE_ADD_AUDIO)
   add_subdirectory(ExamplePixelObserver)
@@ -40,9 +38,7 @@ add_subdirectory(ExampleSandGame)
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleSimplePresentation)
 endif()
-if(BBE_RENDER_MODE STREQUAL "Vulkan") # Shaders are Renderer specific
-  add_subdirectory(ExampleSignedDistanceField)
-endif()
+add_subdirectory(ExampleSignedDistanceField)
 add_subdirectory(ExampleSnake)
 add_subdirectory(ExampleSnake3D)
 if(BBE_ADD_AUDIO)
