It's not possible to draw lines in 3D.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -2,6 +2,9 @@ add_subdirectory(Example2DPhysicsBallPit)
 add_subdirectory(Example2DPhysicsChainReaction)
 add_subdirectory(Example3D)
 if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(Example3DLineDraw)
+endif()
+if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleBackroomsGenerator)
 endif()
 add_subdirectory(ExampleBalloonGame)
