Changed implementation to use OpenAL instead of PortAudio.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,10 @@ if(EMSCRIPTEN)
   set(BBE_RENDER_MODE "Emscripten" CACHE STRING "" FORCE)
   set(BBE_ADD_CURL OFF CACHE BOOL "" FORCE)
   set(BBE_ADD_TEST_PROJECTS OFF CACHE BOOL "" FORCE)
-  set(BBE_ADD_AUDIO OFF CACHE BOOL "" FORCE)
+  if(BBE_ADD_AUDIO)
+    # I honestly have no idea why this is necessary to build.
+    set(LIBTYPE STATIC CACHE BOOL "" FORCE)
+  endif()
 endif()
 
 macro(install_compiled_shaders currProject)
@@ -72,6 +75,9 @@ macro(add_trivial_project name)
   target_include_directories(${name} PUBLIC .)
   if(EMSCRIPTEN)
     set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1 -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_DISABLE_EXCEPTION_CATCHING=1")
+    if(BBE_ADD_AUDIO)
+        set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1 -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -lopenal -s NO_DISABLE_EXCEPTION_CATCHING=1")
+    endif()
   endif()
   if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Assets")
     file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/Assets/*")
@@ -221,6 +227,7 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   target_link_libraries(BrotBoxEngine glew_s)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
+  set_target_properties(glew glew_s glewinfo uninstall visualinfo PROPERTIES FOLDER Deps)
 elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
   add_compile_options(-sUSE_PTHREADS=1)
   add_link_options(-sEXCEPTION_DEBUG=1)
@@ -247,6 +254,7 @@ else()
     set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
     add_subdirectory(Third-Party/glfw-3.3.2)
     target_link_libraries(BrotBoxEngine glfw ${GLFW_LIBRARIES})
+    set_target_properties(glfw PROPERTIES FOLDER Deps)
   endif()
 endif()
 
@@ -263,7 +271,7 @@ set(BOX2D_BUILD_TESTBED OFF CACHE BOOL "" FORCE)
 add_subdirectory(Third-Party/box2d-master)
 include_directories(Third-Party/box2d-master/include)
 target_link_libraries(BrotBoxEngine box2d)
-set_target_properties(box2d PROPERTIES FOLDER box2d)
+set_target_properties(box2d PROPERTIES FOLDER Deps)
 
 if(BBE_ADD_CURL)
   set(BUILD_CURL_EXE OFF CACHE BOOL "" FORCE)
@@ -275,17 +283,17 @@ if(BBE_ADD_CURL)
   target_link_libraries(BrotBoxEngine libcurl)
   include_directories(Third-Party/curl-7.77.0/include)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_ADD_CURL)
+  set_target_properties(libcurl PROPERTIES FOLDER Deps)
 endif()
 
 if(BBE_ADD_AUDIO)
-  if(WIN32)
-    add_subdirectory("Third-Party/portaudio")
-  else()
-    link_directories("${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/portaudio/_Build")
+  set(ALSOFT_EXAMPLES OFF CACHE BOOL "" FORCE)
+  add_subdirectory("Third-Party/openal-soft-1.23.0")
+  target_include_directories(BrotBoxEngine PUBLIC "Third-Party/openal-soft-1.23.0/include")
+  if(NOT EMSCRIPTEN)
+    target_link_libraries(BrotBoxEngine OpenAL)
   endif()
-  
-  include_directories(Third-Party/portaudio/include)
-  target_link_libraries(BrotBoxEngine portaudio portaudio_static)
+  set_target_properties(common ex-common OpenAL openal-info PROPERTIES FOLDER Deps)
 else()
   add_compile_definitions(BBE_NO_AUDIO)
 endif()
@@ -295,6 +303,7 @@ target_include_directories(BrotBoxEngine PUBLIC "Third-Party/minimp3")
 
 if(BBE_ADD_TEST_PROJECTS)
   add_subdirectory(Tests)
+  set_target_properties(gtest gtest_main PROPERTIES FOLDER Deps)
 endif()
 if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(Examples)
