--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -32,7 +32,7 @@ add_subdirectory(ExampleParticleGravity)
 add_subdirectory(ExampleParticleLife)
 add_subdirectory(ExamplePendulumChaosShader)
 add_subdirectory(ExamplePhasmophobiaCheatSheet)
-if(BBE_ADD_AUDIO)
+if(BBE_ADD_AUDIO AND WIN32)
   add_subdirectory(ExamplePixelObserver)
 endif()
 add_subdirectory(ExampleRotatingCubeIntersections)
