Adding the uninstall target to all GLFW targets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -257,7 +257,7 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   target_link_libraries(BrotBoxEngine glew_s)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
-  set_target_properties(glew glew_s glewinfo uninstall visualinfo PROPERTIES FOLDER Deps)
+  set_target_properties(glew glew_s glewinfo visualinfo PROPERTIES FOLDER Deps)
 elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
   add_compile_options(-sUSE_PTHREADS=1)
   add_link_options(-sEXCEPTION_DEBUG=1)
@@ -284,7 +284,7 @@ else()
     set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
     add_subdirectory(Third-Party/glfw-3.3.2)
     target_link_libraries(BrotBoxEngine glfw ${GLFW_LIBRARIES})
-    set_target_properties(glfw PROPERTIES FOLDER Deps)
+    set_target_properties(glfw uninstall PROPERTIES FOLDER Deps)
   endif()
 endif()
 
