Removed the unmaintained and buggy Terrain, as well as everything that relates to it.

--- a/BrotBoxEngine/Vulkan/CMakeLists.txt
+++ b/BrotBoxEngine/Vulkan/CMakeLists.txt
@@ -4,7 +4,7 @@ target_sources(BrotBoxEngine PRIVATE "${local_src}")
 target_include_directories(BrotBoxEngine PUBLIC .)
 
 start_embed_file(outputCpp outputH EmbedOutput.h)
-foreach(filename frag2DImage;frag2DPrimitive;frag3DPrimitive;frag3DTerrain;tesc3DTerrain;tese3DTerrain;vert2DPrimitive;vert3DPrimitive;vert3DTerrain)
+foreach(filename frag2DImage;frag2DPrimitive;frag3DPrimitive;vert2DPrimitive;vert3DPrimitive)
   embed_file_to_source(${filename}.spv outputCpp outputH)
 endforeach()
 end_embed_file(outputCpp outputH EmbedOutput.cpp EmbedOutput.h)
