--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -4,8 +4,10 @@ add_subdirectory(Example3D)
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(Example3DLineDraw)
 endif()
-if(BBE_ADD_EXPERIMENTAL)
-  add_subdirectory(ExampleBackroomsGenerator)
+if(BBE_RENDER_MODE STREQUAL OpenGL)
+  if(BBE_ADD_EXPERIMENTAL)
+    add_subdirectory(ExampleBackroomsGenerator)
+  endif()
 endif()
 add_subdirectory(ExampleBalloonGame)
 add_subdirectory(ExampleConvexHull)
