--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(Example3D)
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(Example3DLineDraw)
 endif()
-if(BBE_RENDER_MODE STREQUAL OpenGL)
+if(BBE_RENDER_MODE STREQUAL OpenGL OR BBE_RENDER_MODE STREQUAL Emscripten)
   if(BBE_ADD_EXPERIMENTAL)
     add_subdirectory(ExampleBackroomsGenerator)
   endif()
