--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,9 +74,9 @@ macro(add_trivial_project name)
   install_compiled_shaders(${name})
   target_include_directories(${name} PUBLIC .)
   if(EMSCRIPTEN)
-    set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1 -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_DISABLE_EXCEPTION_CATCHING=1")
+    set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -s NO_DISABLE_EXCEPTION_CATCHING=1 -s USE_WEBGL2=1")
     if(BBE_ADD_AUDIO)
-        set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1 -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -lopenal -s NO_DISABLE_EXCEPTION_CATCHING=1")
+        set_target_properties(${name} PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -lopenal -s NO_DISABLE_EXCEPTION_CATCHING=1 -s USE_WEBGL2=1")
     endif()
   endif()
   if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Assets")
@@ -314,7 +314,7 @@ elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
   add_link_options(--profiling-funcs)
   add_link_options(-sUSE_PTHREADS=1)
   add_link_options(-sPTHREAD_POOL_SIZE=20)
-  set_target_properties(BrotBoxEngine PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s FULL_ES3=1")
+  set_target_properties(BrotBoxEngine PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s USE_WEBGL2=1")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
 elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
@@ -388,4 +388,3 @@ endif()
 if(BBE_ADD_EXAMPLE_PROJECTS)
   add_subdirectory(Examples)
 endif()
-
