--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -60,3 +60,12 @@ endif()
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleWaveFunctionCollapse)
 endif()
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleBla)
+endif()
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleClipboard)
+endif()
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleMother)
+endif()
