Adding a sound when ignoring the night for too long.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,7 @@ macro(add_trivial_project name)
     endif()
   endif()
   if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/Assets")
-    file(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/Assets/*")
+    file(GLOB files CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/Assets/*")
     start_embed_file(cpp_file_string h_file_string AssetStore.h)
     set(delete_calls "")
     set(hot_reload_arms "")
