--- a/BrotBoxEngine/CMakeLists.txt
+++ b/BrotBoxEngine/CMakeLists.txt
@@ -13,3 +13,7 @@ file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
 target_sources(BrotBoxEngine PRIVATE "${local_src}")
 
 target_include_directories(BrotBoxEngine PUBLIC .)
+
+if (WIN32)
+  add_subdirectory(GlobalKeyboardDLL)
+endif()
