--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -64,3 +64,6 @@ if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleMother)
 endif()
 add_subdirectory(ExampleLSystem)
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExamplePaint)
+endif()
