Project structure of curl is a bit different on non-windows platforms. e.g. libcurl_object does not seem to exist.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -379,8 +379,10 @@ if(BBE_ADD_CURL)
   target_link_libraries(BrotBoxEngine libcurl)
   include_directories(Third-Party/curl-8.8.0/include)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_ADD_CURL)
-  set_target_properties(libcurl_object PROPERTIES FOLDER Deps)
-  set_target_properties(libcurl_static PROPERTIES FOLDER Deps)
+  if(WIN32)
+    set_target_properties(libcurl_object PROPERTIES FOLDER Deps)
+    set_target_properties(libcurl_static PROPERTIES FOLDER Deps)
+  endif()
 endif()
 
 if(BBE_ADD_AUDIO)
